Updated the TODO section of the dispersion chapter of the manual for the newly listed models.

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -832,9 +832,12 @@ Synthetic data, or experimental data, can be obtained from the literature.
 
 Some of the missing models include:
 \begin{description}
-\item[`NS $\Ronerho$ 3-site':]\index{relaxation dispersion!NS R1rho 3-site model}  The model of the numeric solution for 3-site exchange for $\Ronerho$-type data.
-\item[`MMQ 3-site':]\index{relaxation dispersion!MMQ 3-site model}  The model of the numeric solution for 3-site exchange for multiple quantum CPMG-type data.  This is the linear 3-site exchange model.
-\item[`MMQ 3-site branched':]\index{relaxation dispersion!MMQ 3-site branched model}  Similar to the `MMQ 3-site' but with one of the $\kex$ parameters not set to zero.
+\item[`TP04':]\index{relaxation dispersion!TP04 model}  The $\Ronerho$-type data \citet{TrottPalmer04} N-site analytic equation for all time scales with parameters $\{\Ronerhoprime, \dots, \pone, \dots, \pN, \aveomega, \konetwo, \dots\, \koneN\}$.
+\item[`MP05':]\index{relaxation dispersion!TP04 model}  The $\Ronerho$-type data \citet{MiloushevPalmer05} 2-site analytic equation for all time scales with parameters $\{\Ronerhoprime, \dots, \pA, \dw, \kex\}$.
+\item[`MMQ 3-site linear':]\index{relaxation dispersion!MMQ 3-site linear model}  The model of the numeric solution for linear 3-site exchange for combined proton-heteronuclear SQ, ZQ, DQ and MQ (MMQ) CPMG-type data.
+\item[`MMQ 3-site branched':]\index{relaxation dispersion!MMQ 3-site branched model}  Similar to the `MMQ 3-site linear' model but with one of the $\kex$ parameters not set to zero.
+\item[`NS $\Ronerho$ 3-site linear':]\index{relaxation dispersion!NS R1rho 3-site linear model}  The model of the numeric solution for linear 3-site exchange for $\Ronerho$-type data.
+\item[`NS $\Ronerho$ 3-site branched':]\index{relaxation dispersion!NS R1rho 3-site branched model}  Similar to the `NS $\Ronerho$ 3-site linear' model but with one of the $\kex$ parameters not set to zero.
 \end{description}
 
 Information for how these can be added is given in the next section.
