Small LaTeX layout changes to the dispersion chapter file.

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -194,7 +194,9 @@ This is not implemented in relax as it can be shown by simple simulation that th
 % Variable relaxation period experiments.
 \subsubsection{Variable relaxation period experiments}
 
-For the variable relaxation time period type experiments, the $\Rtwoeff$/$\Ronerho$ values are determined by fitting to the simple two parameter exponential as in a $\Rone$ or $\Rtwo$ analysis.  Both $\Rtwoeff$/$\Ronerho$ and the initial peak intensity $I_0$ are optimised using the minimise user function for each exponential curve separately.  Monte Carlo simulations are used to obtain the parameter errors.
+For the variable relaxation time period type experiments, the $\Rtwoeff$/$\Ronerho$ values are determined by fitting to the simple two parameter exponential as in a $\Rone$ or $\Rtwo$ analysis.
+Both $\Rtwoeff$/$\Ronerho$ and the initial peak intensity $I_0$ are optimised using the minimise user function for each exponential curve separately.
+Monte Carlo simulations are used to obtain the parameter errors.
 
 
 
@@ -205,7 +207,10 @@ For the variable relaxation time period type experiments, the $\Rtwoeff$/$\Roner
 \label{sect: dispersion: No Rex model}
 \index{relaxation dispersion!No Rex model|textbf}
 
-This model is provided for model selection purposes.  In combination with frequentist methods, such as AIC\index{model selection!AIC}, or Bayesian methods\index{model selection!Bayesian} it can show if the presence of chemical exchange is statistically significant.  Optimisation is still required as one $\Rtwozero$ value per magnetic field strength will be fit to the measured data for each spin system.  It is selected by setting the model to `No Rex'.
+This model is provided for model selection purposes.
+In combination with frequentist methods, such as AIC\index{model selection!AIC}, or Bayesian methods\index{model selection!Bayesian} it can show if the presence of chemical exchange is statistically significant.
+Optimisation is still required as one $\Rtwozero$ value per magnetic field strength will be fit to the measured data for each spin system.
+It is selected by setting the model to `No Rex'.
 
 
 
