Updated the dispersion software comparison table for the optimisation in GUARDD.
I have added the 'MATLAB interior-point black magic' algorithm as MATLAB is not kind enough to
explain what algorithm it is really using.

--- a/docs/latex/dispersion_software.tex
+++ b/docs/latex/dispersion_software.tex
@@ -107,6 +107,7 @@ Nelder-Mead simplex algorithm                   & \no  & \no  & \no  & \no  & \n
 Levenberg-Maquardt algorithm                    & \yes & \yes & \yes & \yes & \no  & \yes & \yes & \yes & \no  \\
 Numeric gradient approximation                  & \yes & \yes & \yes & \yes & \no  & \yes & \yes & \yes & \no  \\
 Logarithmic-barrier constraint algorithm        & \no  & \no  & \no  & \no  & \no  & \no  & \yes & \no  & \yes \\
+MATLAB interior-point black magic               & \no  & \no  & \no  & \no  & \yes & \no  & \no  & \no  & \no  \\
 Visualisation of the chi-squared space          & \no  & \no  & \no  & \no  & \yes & \no  & \no  & \no  & \yes \\
 
 \vspace{-5pt} \\
