Added the TAP03 model to the dispersion chapter of the user manual.

--- a/docs/latex/bibliography.bib
+++ b/docs/latex/bibliography.bib
@@ -73,6 +73,9 @@
 % Mathematics of Computation.
 @STRING{mc          = "Math. Comp."}
 
+% Molecular Physics.
+@STRING{mp          = "Mol. Phys."}
+
 % Physical Review.
 @STRING{physrev     = "Phys. Rev."}
 
@@ -6885,6 +6888,51 @@
   eprint         = {http://pubs.acs.org/doi/pdf/10.1021/ja011300z},
   url            = {http://dx.doi.org/10.1021/ja011300z},
   year           = 2001
+}
+
+@Article{Trott03,
+  Author         = {Trott, O and Abergel, D and Palmer, AG},
+  Title          = {An average-magnetization analysis of {R}-1 rho
+                   relaxation outside of the fast exchange},
+  Journal        = mp,
+  Volume         = {101},
+  Number         = {6},
+  Pages          = {753-763},
+  abstract       = {Approximate expressions for the {NMR} spin relaxation
+                   rate constant in the rotating frame of reference {R}-1rho
+                   are derived for two-site chemical exchange by
+                   consideration of the evolution of the average density
+                   operator using the stochastic {L}iouville equation.
+                   {R}-1rho is obtained as a linearized approximation to the
+                   largest (least negative) eigenvalue of the matrix
+                   describing the evolution of the average density
+                   operator in the long-term limit. The expressions
+                   obtained are more accurate than existing expressions
+                   when exchange is not fast and the populations of the
+                   exchanging sites are close to equal. The new
+                   expressions for {R}-1rho facilitate the interpretation of
+                   chemical exchange phenomena in proteins and other
+                   biological macromolecules.},
+  address        = {4 PARK SQUARE, MILTON PARK, ABINGDON OX14 4RN, OXON,
+                   ENGLAND},
+  affiliation    = {Abergel, D (Reprint Author), Ecole Normale Super,
+                   Chim Lab, F-75005 Paris, France. Ecole Normale Super,
+                   Chim Lab, F-75005 Paris, France. Columbia Univ, Dept
+                   Biochem \& Mol Biophys, New York, NY 10032 USA.},
+  doc-delivery-number = {660MA},
+  doi            = {10.1080/0026897021000054826},
+  issn           = {0026-8976},
+  journal-iso    = {Mol. Phys.},
+  keywords-plus  = {SPIN},
+  language       = {English},
+  number-of-cited-references = {19},
+  publisher      = {TAYLOR \& FRANCIS LTD},
+  research-areas = {Physics},
+  times-cited    = {18},
+  type           = {Article},
+  unique-id      = {ISI:000181835900005},
+  web-of-science-categories = {Physics, Atomic, Molecular \& Chemical},
+  year           = 2003
 }
 
 @Article{TrottPalmer02,
