--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -837,6 +837,7 @@ Synthetic data, or experimental data, can be obtained from the literature.
 
 Some of the missing models include:
 \begin{description}
+\item[`TAP03':]\index{relaxation dispersion!TAP03 model}  The $\Ronerho$-type data \citet{Trott03} 2-site analytic equation for all time scales with parameters $\{\Ronerhoprime, \dots, \pA, \dw, \kex\}$.
 \item[`TP04':]\index{relaxation dispersion!TP04 model}  The $\Ronerho$-type data \citet{TrottPalmer04} N-site analytic equation for all time scales with parameters $\{\Ronerhoprime, \dots, \pone, \dots, \pN, \aveomega, \konetwo, \dots\, \koneN\}$.
 \item[`MP05':]\index{relaxation dispersion!TP04 model}  The $\Ronerho$-type data \citet{MiloushevPalmer05} 2-site analytic equation for all time scales with parameters $\{\Ronerhoprime, \dots, \pA, \dw, \kex\}$.
 \item[`MMQ 3-site linear':]\index{relaxation dispersion!MMQ 3-site linear model}  The model of the numeric solution for linear 3-site exchange for combined proton-heteronuclear SQ, ZQ, DQ and MQ (MMQ) CPMG-type data.
