Updated some ShereKhan language details in the dispersion software comparison table of the manual.

--- a/docs/latex/dispersion_software.tex
+++ b/docs/latex/dispersion_software.tex
@@ -131,11 +131,12 @@ F-testing (ANOVA statistics)                    & \no  & \no  & \no  & \yes & \y
 \vspace{-5pt} \\
 \textbf{Programming languages} \\
 \cmidrule(lr){1-1}
-Python                      & \no  & \no  & \no  & \yes & \no  & \no  & \no  & \yes & \yes \\
-C                           & \no  & \yes & \yes & \no  & \no  & \yes & \yes & \no  & \yes \\
+Python                      & \no  & \no  & \no  & \yes & \no  & \yes & \no  & \yes & \yes \\
+C                           & \no  & \yes & \yes & \no  & \no  & \no  & \yes & \no  & \yes \\
 Perl                        & \no  & \no  & \no  & \no  & \no  & \no  & \yes & \no  & \no  \\
 MATLAB                      & \no  & \no  & \no  & \no  & \yes & \no  & \no  & \no  & \no  \\
 FORTRAN                     & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
+Ruby on Rails               & \no  & \no  & \no  & \no  & \no  & \yes & \no  & \no  & \no  \\
 
 \vspace{-5pt} \\
 \textbf{Open source licencing} \\
