--- a/docs/latex/dispersion_software.tex
+++ b/docs/latex/dispersion_software.tex
@@ -68,7 +68,7 @@ DPL94                       & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \
 TP02                        & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
 TAP03                       & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
 TP04                        & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
-MP05                        & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
+MP05                        & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
 NS 2-site                   & \no  & \yes & \no  & \no  & \no  & \no  & ?    & \no  & \yes \\
 NS 3-site (linear)          & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
 NS 3-site (branched)        & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
