--- a/docs/latex/dispersion_software.tex
+++ b/docs/latex/dispersion_software.tex
@@ -66,7 +66,7 @@ $\Ronerho$-type \\
 M61                         & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
 DPL94                       & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
 TP02                        & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
-TAP03                       & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
+TAP03                       & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
 TP04                        & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
 MP05                        & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
 NS 2-site                   & \no  & \yes & \no  & \no  & \no  & \no  & ?    & \no  & \yes \\
