Added the 'TAP03' and 'MP05' models to the abbreviations in the user manual.

--- a/docs/latex/relax.tex
+++ b/docs/latex/relax.tex
@@ -327,6 +327,7 @@
 \item[MC:]  Monte Carlo (simulations)
 \item[MD:]  molecular dynamics (simulations)
 \item[MMQ:]  proton-heteronuclear SQ, ZQ, DQ, and MQ data (multi-multiple quantum)
+\item[MP05:]  the \citet{MiloushevPalmer05} relaxation dispersion model
 \item[MPI:]  message passing interface
 \item[MQ:]  multiple quantum
 \item[NMR:]  if you do not know this one, do not read further
@@ -353,6 +354,7 @@
 \item[$\tau_e$, $\tau_f$, and $\tau_s$:]  model-free effective internal correlation times
 \item[$\tau_m$:]  global rotational correlation time
 \item[TP02:]  the \citet{TrottPalmer02} relaxation dispersion model
+\item[TAP03:]  the \citet{Trott03} relaxation dispersion model
 \item[TSMFK01:]  the \citet{Tollinger01} relaxation dispersion model
 \item[UI:]  user interface
 \item[XML:]  extensible markup language
